# SWE-Agent

./: .gitignore  LICENSE  README.md  pyproject.toml
adapters/: __init__.py  base.py  codex_adapter.py
cat_core/: __init__.py  core.py  models.py  storage.py
docs/: adapter-contracts-codex-cursor-claude-code.md  agent-agnostic-cat-spec.md  canonical-cat-reference.md  v2-implementation-notes.md  v2.1-productization.md
examples/: codex_trace_sample.jsonl
scripts/: __init__.py  cat_demo.py
tests/: test_cat_core.py  test_productization.py
